svenska nästan klart! buy-knappar saknas ännu.

--- a/braattveta.html
+++ b/braattveta.html
@@ -10,7 +10,7 @@ id: braattveta
 </section>
 <nav>
     <ul class="ingredienslista nobullets padding">
-        <li><a href="#bodybutters">Om Body Butters</a></li>
+        <li><a href="/body#bodybutters">Om Body Butters</a></li>
         <li><a href="#konserveringsmedel">Utan konserverings&shy;medel</a></li>
         <li><a href="#emulgeringsmedel">Utan emulgeringsmedel</a></li>
         <li><a href="/face#phytoboosters">Om fytoaromatiska oljor</a></li>
@@ -28,7 +28,7 @@ id: braattveta
                 <p>Ett body butter är just som namnet låter påskina, ett nästan 100-procentigt fett. Dr Hardmans body butters innehåller bara för huden viktiga ingredienser, och ibland växtextrakt eller eteriska oljor som dofttillsats. De flesta dofterna kommer dock från huvud&shy;ingredienserna som t.ex. kakaosmöret.
                     <br>Eftersom Hardmans body butters inte innehåller kemikalier som stabiliserar produktens konsistens så reagerar de på omgivningens temperatur. Jämför t.ex ett matfett som smör. Smör smälter i solen och blir väldigt hårt i kylskåp. Likaså Dr Hardmans body butters.</p>
 
-                <a href="/citrusbodybutter"><img class="img-fluid profilbild spacing-unit" src="/img/hardman_no23_citrusbodybutter.jpg" alt="DrHardman citrus body butter"></a>
+                <a href="/no23-citrusbodybutter"><img class="img-fluid profilbild spacing-unit" src="/img/hardman_no23_citrusbodybutter.jpg" alt="DrHardman citrus body butter"></a>
 
                 <p>Alla våra body butters är vispade. Detta gör konsistensen användarvänlig och produkten lättbredd i rumstemperatur 17-22°C. Ett vispat body butter innehåller luft, liksom vispad grädde, och väger följaktligen mindre än en ovispad produkt.
                     <br>Eftersom Dr Hardmans alla produkter är fria från konserveringsmedel, säljer vi produkterna i sådana mängder, att de beräknas ta slut inom 2 månader vid daglig användning.
@@ -68,7 +68,7 @@ id: braattveta
                 <hr class="primary" />
                 <p>Dr Hardmans fytoaromatiska oljor är inte som din vanliga ansiktsolja. Våra koncentrerade ansiktsoljeserum är utformade för att ge näring åt huden samtidigt som de stöder behandling av specifika problem. Med vegetabiliska oljor och organiska botaniska extrakt av högsta kvalitet ger fytoboostern dig en kraftfull dos av näringsämnen och vitaminer samt en delikat arom.</p>
 
-                        <a href="/youthfulglow"><img class="img-fluid profilbild spacing-unit" src="/img/hardman_faceoils.jpg" alt="DrHardman ansiktsoljor"></a>
+                        <a href="/no31-youthfulglow"><img class="img-fluid profilbild spacing-unit" src="/img/hardman_faceoils.jpg" alt="DrHardman ansiktsoljor"></a>
 
 
                 <h3>Fytoaromatiska ansiktosoljor kan användas på många olika sätt:</h3>
@@ -86,9 +86,9 @@ id: braattveta
     <h4>Som mild aromaterapi</h4> <p>fina aromer från naturliga och ekologiska växtextrakt ger den traditionella aromaterapins fördelar men lämpar sig också för känsliga hudtyper.
 </p>
                 <h4>Dr Hardmans phytoboosters</h4>
-                    <p><a href="/clarified">No 30 Clarified</a>
-                    <br><a href="/youthfulglow">No 31 Youthful Glow</a>
-                    <br><a href="/serendipity">No 32 Serendipity</a>
+                    <p><a href="/no30-clarified">No 30 Clarified</a>
+                    <br><a href="/no31-youthfulglow">No 31 Youthful Glow</a>
+                    <br><a href="/no32-serendipity">No 32 Serendipity</a>
                 </p>
 
                 <a class="up pull-right" href="#page-top"><i class="fa fa-angle-double-up" aria-hidden="true"></i> Upp</a>
@@ -100,7 +100,7 @@ id: braattveta
                 <p>Schampo i bit är tvålbaserat och beter sig lite annorlunda än schampo som innehåller ytaktiva ämnen. Tvål är ett milt tvättmedel skonsamt mot hårbotten. Många användare har blivit av med kliande hårbotten och mjäll efter att de bytt till schampotvål. Tvålbaserat schampo gör håret fluffigt och de flesta användare behöver efteråt inga stylingprodukter alls. Håret är ändå lätt att styla.</p>
                 <p>Endel användare kan uppleva att håret blir klibbigt av bitschampo då de påbörjar användningen. Ge inte upp! Klibbigheten bör försvinna efter ett par tre tvättar då håret vant sig med produkten. Shampobiten är en superprodukt med tusentals nöjda användare också i Finland! Ge den en chans!</p>
                 <figure>
-                <a href="/shampoobar"><img class="img-fluid profilbild spacing-unit" src="/img/DrHardmans_No55_Shampoo_Bar.png" alt="citrus shampoobar"></a>
+                <a href="/no55-shampoobar"><img class="img-fluid profilbild spacing-unit" src="/img/DrHardmans_No55_Shampoo_Bar.png" alt="citrus shampoobar"></a>
                 </figure>
                     <h3>Såhär använder du schampo i bit</h3>
                 <p>Blöt håret noggrant med varmt vatten (skummet blir bättre i varmt vatten), och blöt också schampobiten. Gnid schampobiten mot håret så länge att skummet är rikt överallt. Se till att du får ordentligt med lödder i nacken, särskilt om du har långt hår. Tillsätt lite varmt vatten i håret, om det känns som att löddret inte vill ta sig. Du kan också göra en kort mellansköljning och löddra upp igen, om det känns som det skulle behövas. <br>Då löddret är rikt, massera hårbotten ren med fingertopparna och skölj därefter håret noggrannt med varmt vatten. Handdukstorka och tillsätt balsam eller annan vårdprodukt vid behov.</p>
@@ -126,7 +126,7 @@ id: braattveta
                     <li>Passar inte så bra för starkt färgade hår. Färgen tvättas ur fortare, och färgat hår kan behöva ett mer vårdande schampo.</li>
                 </ul>
                 <figure>
-                <a href="/shampoobar"><img class="img-fluid profilbild spacing-unit" src="/img/hardman_no55_shampoobar.jpg" alt="DrHardman shampoobar"></a>
+                <a href="/no55-shampoobar"><img class="img-fluid profilbild spacing-unit" src="/img/hardman_no55_shampoobar.jpg" alt="DrHardman shampoobar"></a>
                 </figure>
                 <h3>Om schampobiten lämnar håret klibbigt, hur får jag det att fungera?</h3>
                 <p>När du börjar använda schampobiten kan ditt hår kännas klibbigt. Detta är en effekt av hårtyp, behandlingar, tidigare hårvårdsprodukter etc.<br>
@@ -143,8 +143,8 @@ id: braattveta
                 <h3>Behöver jag ett balsam efter schampo i bit?</h3>
                 <p>Till långt hår rekommenderas alltid ett balsam, eftersom topparna i långa hår slits. Använd ditt vanliga balsam, eller Dr Hardmans Aloe Vera balsamspray. Aloe Vera balsamsprayen återställer hårets naturliga sura pH och morverkar klibbighet, ifall du upplevt sådan.</p>
                 <h4>Dr Hardmans hårvårdsprodukter:</h4>
-                    <p><a href="/shampoobar">No 55 Shampoo Bar Citrus</a>
-                    <br><a href="/aloeconditioner">No 56 Aloe Balsam Spray</a></p>
+                    <p><a href="/no55-shampoobar">No 55 Shampoo Bar Citrus</a>
+                    <br><a href="/no56-aloeconditioner">No 56 Aloe Balsam Spray</a></p>
 
                 <a class="up pull-right" href="#page-top"><i class="fa fa-angle-double-up" aria-hidden="true"></i> Upp</a>
                 <p><br></p>
@@ -159,21 +159,21 @@ id: braattveta
                 <p>Växtextrakt tillför i varje fall hudvårdsprodukter så många nyttiga egenskaper, att ibland är det befogat att använda glycerin- och vattenbaserade växtextrakt, trots den mikroskopiska mängd konserveringsmedel de tillför slutprodukten. Dr Hardman använder dock aldrig ingredienser med konserveringsmedel som huvudingredienser. T.ex alla hydrolat (blomvatten som används i ansiktsvattnen) är fria från konserveringsmedel.</p>
                 <h4>Nedan listat Dr Hardmans produkter där också alla mikroingredsienser är fria från konserveringsmedel</h4>
                 <ul class="nobullets">
-                    <li> <a href="/pitstopregular">No 10 Pit Stop Regular Deodorant</a> </li>
-                     <li><a href="/sheabodybutter">No 22 Shea Body Butter</a> </li>
-                     <li><a href="/cocoabodybutter">No 24 Cocoa Body Butter</a> </li>
-                     <li><a href="/rosebodybutter"> No 26 Rose Body Butter</a> </li>
-                     <li><a href="/serendipity">No 32 Serendipity Face Oil</a> </li>
-                     <li><a href="/agedefence">No 44 Age Defence Cream</a> </li>
-                     <li><a href="/pawsandclawsraw">No 47 Paws and Claws Raw</a> </li>
-                     <li><a href="/pawsandclawslavender">No 48 Paws and Claws Lavender</a> </li>
-                     <li><a href="/pawsandclawsvanilla">No 49 Paws and Claws Vanilla-Orange</a> </li>
-                     <li><a href="/shampoobar">No 55 Shampoo Bar Citrus</a> </li>
-                     <li><a href="/redrescuemask">No 66 Red Rescue Mask</a> </li>
+                    <li> <a href="/no10-pitstopre ular">No 10 Pit Stop Regular Deodorant</a> </li>
+                     <li><a href="/no22-calmingsheabodybutter">No 22 Shea Body Butter</a> </li>
+                     <li><a href="/no23-cocoabodybutter">No 24 Cocoa Body Butter</a> </li>
+                     <li><a href="/no26-rosebodybutter"> No 26 Rose Body Butter</a> </li>
+                     <li><a href="/no32-serendipity">No 32 Serendipity Face Oil</a> </li>
+                     <li><a href="/no44-agedefence">No 44 Age Defence Cream</a> </li>
+                     <li><a href="/no47-pawsandclawsraw">No 47 Paws and Claws Raw</a> </li>
+                     <li><a href="/no48-pawsandclawslavender">No 48 Paws and Claws Lavender</a> </li>
+                     <li><a href="/no49-pawsandclawsorangevanilla">No 49 Paws and Claws Vanilla-Orange</a> </li>
+                     <li><a href="/no55-shampoobar">No 55 Shampoo Bar Citrus</a> </li>
+                     <li><a href="/no66-redrescuemask">No 66 Red Rescue Mask</a> </li>
                      <li><a href="/no67-cleansing-and-hydrating-face-mask">No 67 Cleansing & Hydrating Face Mask</a> </li>
                      <li><a href="/no68-tight-and-bright-face-mask">No 68 Tight & Bright Face Mask</a> </li>
-                     <li><a href="/lipbalm">No 70 Vanilla-choko Lip Balm</a> </li>
-                     <li><a href="/lipbalmvitamin">No 71 Vitamin Lip Balm</a> </li>
+                     <li><a href="/no70-lipbalm">No 70 Vanilla-choko Lip Balm</a> </li>
+                     <li><a href="/no71-lipbalmvitamin">No 71 Vitamin Lip Balm</a> </li>
                      <li><a href="/no80-gentle-face-wash-powder">No 80 Gentle Face Wash</a> </li>
                      <li><a href="/no90-refreshing-face-mist">No 90 Refreshing Face Mist</a> </li>
                     <li><a href="/no93-hydrating-face-mist">No 93 Hydrating Face Mist</a> </li>
