--- a/face.html
+++ b/face.html
@@ -114,7 +114,7 @@ tag: white
                                 <hr class="primary" />
                                 <p>Dr Hardmans fytoaromatiska oljor är inte som din vanliga ansiktsolja. Våra koncentrerade ansiktsoljeserum är utformade för att ge näring åt huden samtidigt som de stöder behandling av specifika problem. Med vegetabiliska oljor och organiska botaniska extrakt av högsta kvalitet ger fytoboostern dig en kraftfull dos av näringsämnen och vitaminer samt en delikat arom.</p>
 
-                                        <a href="/youthfulglow"><img class="img-fluid profilbild spacing-unit" src="/img/flipcard-face.jpg" alt="DrHardman ansiktsoljor"></a>
+                                        <figure><a href="/no31-youthfulglow"><img class="img-fluid profilbild spacing-unit" src="/img/flipcard-face.jpg" alt="DrHardman ansiktsoljor"></a></figure>
 
 
                                 <h3>Fytoaromatiska ansiktosoljor kan användas på många olika sätt:</h3>
@@ -132,9 +132,9 @@ tag: white
                     <h4>Som mild aromaterapi</h4> <p>fina aromer från naturliga och ekologiska växtextrakt ger den traditionella aromaterapins fördelar men lämpar sig också för känsliga hudtyper.
                 </p>
                                 <h4>Dr Hardmans phytoboosters</h4>
-                                    <p><a href="/clarified">No 30 Clarified</a>
-                                    <br><a href="/youthfulglow">No 31 Youthful Glow</a>
-                                    <br><a href="/serendipity">No 32 Serendipity</a>
+                                    <p><a href="/no30-clarified">No 30 Clarified</a>
+                                    <br><a href="/no31-youthfulglow">No 31 Youthful Glow</a>
+                                    <br><a href="/no32-serendipity">No 32 Serendipity</a>
                                 </p>
   <h4>Dr Hardmans ansiktskrämer</h4>
   <p><a href="/no44-agedefencecream">No 44 Age Defence Cream ansiktssalva i burk</a>
