--- a/hair.html
+++ b/hair.html
@@ -60,7 +60,7 @@ tag: white
                   <p>Schampo i bit är tvålbaserat och beter sig lite annorlunda än schampo som innehåller ytaktiva ämnen. Tvål är ett milt tvättmedel skonsamt mot hårbotten. Många användare har blivit av med kliande hårbotten och mjäll efter att de bytt till schampotvål. Tvålbaserat schampo gör håret fluffigt och de flesta användare behöver efteråt inga stylingprodukter alls. Håret är ändå lätt att styla.</p>
                   <p>Endel användare kan uppleva att håret blir klibbigt av bitschampo då de påbörjar användningen. Ge inte upp! Klibbigheten bör försvinna efter ett par tre tvättar då håret vant sig med produkten. Shampobiten är en superprodukt med tusentals nöjda användare också i Finland! Ge den en chans!</p>
                   <figure>
-                  <a href="/no55-shampoobar"><img class="img-fluid profilbild spacing-unit" src="/img/DrHardmans_No55_Shampoo_Bar.png" alt="citrus shampoobar"></a>
+                  <a href="/no55-shampoobar"><img class="img-fluid profilbild spacing-unit" src="/img/flipcard-hair.jpg" alt="citrus shampoobar"></a>
                   </figure>
                       <h3>Såhär använder du schampo i bit</h3>
                   <p>Blöt håret noggrant med varmt vatten (skummet blir bättre i varmt vatten), och blöt också schampobiten. Gnid schampobiten mot håret så länge att skummet är rikt överallt. Se till att du får ordentligt med lödder i nacken, särskilt om du har långt hår. Tillsätt lite varmt vatten i håret, om det känns som att löddret inte vill ta sig. Du kan också göra en kort mellansköljning och löddra upp igen, om det känns som det skulle behövas. <br>Då löddret är rikt, massera hårbotten ren med fingertopparna och skölj därefter håret noggrannt med varmt vatten. Handdukstorka och tillsätt balsam eller annan vårdprodukt vid behov.</p>
@@ -86,7 +86,7 @@ tag: white
                       <li>Passar inte så bra för starkt färgade hår. Färgen tvättas ur fortare, och färgat hår kan behöva ett mer vårdande schampo.</li>
                   </ul>
                   <figure>
-                  <a href="/no55-shampoobar"><img class="img-fluid profilbild spacing-unit" src="/img/hardman_no55_shampoobar.jpg" alt="DrHardman shampoobar"></a>
+                  <a href="/no55-shampoobar"><img class="img-fluid profilbild spacing-unit" src="/img/BBshampoobar500.png" alt="DrHardman shampoobar"></a>
                   </figure>
                   <h3>Om schampobiten lämnar håret klibbigt, hur får jag det att fungera?</h3>
                   <p>När du börjar använda schampobiten kan ditt hår kännas klibbigt. Detta är en effekt av hårtyp, behandlingar, tidigare hårvårdsprodukter etc.<br>
