--- a/hands-and-feet.html
+++ b/hands-and-feet.html
@@ -3,7 +3,7 @@ layout: page
 type: Hands & Feet
 title: Hands & Feet
 id: hands
-tag: white
+tag: none
 ---
 <section class="dubbelpadding sloganbox" id="sloganbox10">
     <h1 class="slogan text-center">These feet are made for walkin'</h1>
@@ -31,7 +31,7 @@ tag: white
                 </div>
                 <div class="flip-card-back">
                     <a href="/no48-pawsandclawslavender">
-                        <img class="img-fluid mx-auto pb-3"
+                        <img class="img-fluid"
                              src="/img/DrHardmans_No48_Paws_and_Claws_Lavender_Hand_Cream.png"
                              alt="Dr Hardman No.48 Hand Cream Paws and Claws Lavender">
                     </a>
@@ -46,7 +46,7 @@ tag: white
                 </div>
                 <div class="flip-card-back">
                     <a href="/no49-pawsandclawsorangevanilla">
-                        <img class="img-fluid mx-auto pb-3"
+                        <img class="img-fluid"
                              src="/img/DrHardmans_No49_Paws_and_Claws_Vanilla_Orange_Hand_Cream.png"
                              alt="Dr Hardman No.49 Hand Cream Paws and Claws Vanilla-orange">
                     </a>
@@ -58,24 +58,23 @@ tag: white
 <h2>hand- och fotkräm</h2>
                 <hr class="primary" />
                 <p>Dr Hardmans hand- och fotkrämer är två-ingrediens-produkter med eller utan tillsatta doftoljor. De är tillverkade av obehandlat sheasmör och ekologisk arganolja.</p>
-                <p>Renowned for its health benefits, shea butter has been used by Africans for thousands of years. It is different from other ingredients in cosmetic products in that it actually encourages your skin to absorb moisture from the air ensuring that your skin becomes softer and stays moisturised for longer. Regular users of Raw Organic Shea Butter notice they have softer, smoother, healthier skin.
 
-                                    <br>Raw Organic Shea Butter naturally contains vitamin A and E. Vitamin A is important for improving a number of skins conditions, including, blemishes, wrinkles, eczema and dermatitis. Vitamin E is a common anti-ageing ingredient that protects your skin.</p>
+                                     <p>Sheasmör har använts av afrikaner i tusentals år. Det skiljer sig från andra ingredienser i kosmetiska produkter, eftersom det faktiskt uppmuntrar huden att absorbera fukt från luften, vilket gör att huden blir mjukare och hålls fuktad längre. Regelbunden användning av obehandlat ekologiskt sheasmör ger dig en mjukare och friskare hud.
+                                        <br>Sheasmör innehåller naturligt vitamin A och E. Vitamin A är viktigt för hyn och motverkar fläckar, rynkor, eksem och dermatit. E-vitamin är en ingrediens som skyddar din hud mot fria radikaler och därmed åldrande.</p>
 
-                                    <h3>Where does Dr Hardman's Raw Organic Shea Butter come from?</h3>
+                                    <img class="img-fluid profilbild spacing-unit"
+                                                                 src="/img/flipcard-pawsandclaws.jpg"
+                                                                 alt="Dr Hardman Hand Creams">
+                                    <h3>Varifrån kommer Dr Hardmans obehandlade organsika sheasmör?</h3>
 
-                                    <p>Shea butter comes from the Karite tree, also known as womens gold™. This tree grows in the Savannah regions of West Africa from Senegal in the west to Sudan in the east and onto the foothills of the Ethiopian highlands.</p>
+                                    <p>Sheasmör utvinns från karitereträdet, även känt som kvinnans guld. Trädet växer i savann-områdena i västafrika från Senegal i väst till Sudan i öst och vid foten av de etiopiska högländerna.</p>
+                                    <h3>Vad används sheasmöret till?</h3>
 
-                                    <h3>What is Raw Shea Butter used for?</h3>
+                                    <p>Obehandlat sheasmör kan användas för att avhjälpa en mängd olika hudproblem, inklusive eksem, dermatit, psoriasis, mindre hudirritationer, extrem torrhet, sträckmärken, brännskador, skärningar och små hudskador, solbränna, insektsbett, åldersfläckar, svampinfektioner, ärr, mjäll och mycket mer.
+                                    <br>Smöret skyddar också din hud mot extremt kallt väder och kan även skydda dina muskler före och efter ansträngning.</p>
 
-                                    <p>Raw Shea Butter can be used to help ease a variety of skin conditions, including eczema, dermatitis, psoriasis, minor skin irritations, extreme dryness or toughness, stretch mark, burns, cuts and small skin wounds, sun burn, insect bites, ageing marks, fungal infections, scars, dandruff and many more.
-
-                                    <br>It can also help protect against extreme cold weather and even protect your muscles before and after strenuous exercise.</p>
-
-                                    <p>The shea butter used in Dr Hardman's products has received both Fairtrade certification (from the Fairtrade Foundation, UK) and organic status (from the Soil Association, UK) in 2009. The Fairtrade Raw Organic Shea Butter is 100% unrefined, as raw, natural and as beautiful as you can get it. It retains all its natural content (vitamins A, E, F, minerals, proteins and a fatty acid profile) to ensure that it is suitable for a variety of skin types and that it will help your skin retain its brilliance and elasticity.
-
-                                    <br>Other products on the market contain refined white shea butter. Refined shea butter has been stripped of its nourishing properties and supplemented with extra ingredients to replace those lost in the refining process.</p>
-
+                                    <p>Shea smöret som används i Dr Hardmans produkter har erhållit både Fairtrade certifiering (från Fairtrade Foundation, Storbritannien) och organisk status (från Soil Association, Storbritannien) 2009. Fairtrade Raw Organic Shea Butter är 100% obehandlat, så rått och naturligt och så vackert som du bara kan få det. Smöret har kvar allt sitt naturliga näringsinnehåll (vitaminerna A, E, F, mineraler, proteiner och en oförändrad fettsyraprofil). Det är lämplig för alla hudtyper och hjälper huden att behålla sin glans och elasticitet.
+                                    <br>Andra produkter på marknaden innehåller raffinerat vitt sheasmör. Raffinerat sheasmör har blivit av med många av sina goda egenskaper (främst näringsämnen) och i kosmetisk användning kompletteras produkterna med extra ingredienser för att ersätta de som förlorats i raffineringsprocessen.</p>
                                     <h4>Pröva andra av Dr Hardmans produkter som innehåller det råa ekologiska sheasmöret, tillexempel:</h4>
                                         <p><a href="/no22-sheabodybutter">No 22 Calming Shea Body Butter</a>
                                         <br><a href="/no23-citrusbodybutter">No 23 Citrus Body Butter</a>
