--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ tag: white
      </div>
 
     <div class="card fifty5"><a href="/hair">
-                <h1>hair & scalp</h1>
+                <h1>head and hair</h1>
                 <p>för håret</p></a>
      </div>
 
@@ -41,20 +41,20 @@ tag: white
                 <h1>masks & face mists</h1>
                 <p>masker och fuktgivare</p></a>
     </div>
+
 </section>
 
 
 <section class="dubbelpadding grey">
     <div class="text-center">
-        <a class="" name="page-buy" id="page-buy"></a>
 
         <p>Dr Hardman's färska, närproducerade och helt naturliga produkter ger dig de renaste ingredienserna, speciellt
             utvalda för sina helande egenskaper, utan extra kemikalie­belastning. Ge din hud ren mat!</p>
-        <button class="button"><a target="_blank" href="https://arenan.yle.fi/1-4261190">Lyssna i Radio Vega!</a>
-        </button>
+        <a target="_blank" href="https://arenan.yle.fi/1-4261190"><button>Lyssna i Radio Vega! </button></a>
+
     </div>
+    <a name="jumptarget" id="page-buy"></a>
     <div class="text-center padding">
-    <a name="jumtarget" id="buy"></a>
         <heading><h1 class="faktarutarubrik">Du kan köpa Dr Hardman's produkter på REKO i Ekenäs, Karis och Ingå.</h1>
         </heading>
         <p>Gå till Facebook-gruppen (sluten) via länkarna nedan, och begär om medlemskap!
@@ -64,6 +64,7 @@ tag: white
 
 
         <h1>Till FÖRSÄLJNING FRE 16.3:</h1>
+        <p class="small">(Alla produkter kanske inte finns tillgängliga varje vecka.)</p>
         <p><a href="/no10-pitstopregular">DrH <strong>no.10</strong> PIT STOP naturlig deodorant</a>
             <br><a href=" /no22-calmingsheabodybutter">DrH <strong>no.22</strong> CALMING SHEA BODY BUTTER</a>
             <br><a href="/no23-citrusbodybutter">DrH <strong>no.23</strong> CITRUS BODY BUTTER</a>
