--- a/no22-calmingsheabodybutter.html
+++ b/no22-calmingsheabodybutter.html
@@ -67,9 +67,10 @@ tag: white
 
     <p>&nbsp;</p>
     <h4>DR HARDMANS LIKNANDE PRODUKTER</h4>
-    <p><a href="/lipbalm">No 70 Vanilla-Choko Lip Balm</a>
+    <p><a href="/no70-lipbalm">No 70 Vanilla-Choko Lip Balm</a>
         <br><a href="/no23-citrusbodybutter">No 23 Citrus Body Butter</a>
         <br><a href="/no24-cocoabodybutter">No 24 Cocoa Body Butter</a>
         <br><a href="/no25-mangobodybutter">No 25 Mango Body Butter</a>
         <br><a href="/no26-rosebodybutter">No 26 Rose Body Butter</a>
     </p>
+<a class="text-center" href="/#page-buy"><button>Köp produkten</button></a>
