--- a/no26-rosebodybutter.html
+++ b/no26-rosebodybutter.html
@@ -8,9 +8,14 @@ tag: white
 ---
 
 
-<section class="dubbelpadding sloganbox" id="sloganbox10">
-    <h1 class="slogan text-center"></h1>
+<section class="dubbelpadding sloganbox" id="sloganbox">
+    <h1 class="slogan text-center">As fair art thou, my bonnie lass,
+                                  <br>So deep in luve am I:
+                                   <br>And I will luve thee still, my dear,
+                                   <br>Till a' the seas gang dry:
+</h1>
 </section>
+<p>Robert Burns <i>-A Red Red Rose, andra versen</i></p>
 
 <article class="padding grey">
      <header><h1>No 26 Rose Body Butter</h1></header>
