--- a/no70-lipbalm.html
+++ b/no70-lipbalm.html
@@ -27,7 +27,7 @@ tag: white
         </div>
     </figure>
 
-                <h1 class="pris">3,00 € *</h1>
+                <h2 class="pris">3,00 € *</h2>
                 <p class="small">* Rekopris. I Sverige 30 kr.</p>
 
                     <h2 class="faktarutarubrik">Snabb&shy;fakta</h2>
@@ -66,8 +66,8 @@ tag: white
                 <p>Dr Hardmans läppomada säljs numera enbart som stift emedan de är mer hygieniska och lättare att breda på. Med Dr Harmans läppomada behöver du inte oroa dig över att du äter en del av ditt läppfett. Alla ingredienser är ätbara! Kakaosmöret är samma som används i choklad och andra livsmedel, liksom vaniljoljan. Ricinolja och lanolin = (fårfett) samt vitamin E är också ätligt, om än inte rekommenderat som föda.
                 <br>Kasta petrolater och parabener! Njut av ren mat för dina läppar med skyddande och närande ingredienser.</p>
                 <h4>Dr Hardmans liknande produkter</h4>
-                    <p><a href="/lipbalmvitamin">No 71 Vitamin Lip Balm läppomada</a>
-                    <br><a href="/pawsandclawsraw">No 47 Paws and Claws hand- och fotkräm utan dofttillsatser</a>
-                    <br><a href="/pawsandclawslavender">No 48 Paws and Claws hand och fotkräm med doft av lavendel och ylang ylang</a>
-                    <br><a href="/pawsandclawsvanilla">No 48 Paws and Claws vanilj- och apelsindoftande hand- och fotkräm</a>
+                    <p><a href="/no71-lipbalmvitamin">No 71 Vitamin Lip Balm läppomada</a>
+                    <br><a href="/no47-pawsandclawsraw">No 47 Paws and Claws hand- och fotkräm utan dofttillsatser</a>
+                    <br><a href="/no48-pawsandclawslavender">No 48 Paws and Claws hand och fotkräm med doft av lavendel och ylang ylang</a>
+                    <br><a href="/no49-pawsandclawsvanilla">No 48 Paws and Claws vanilj- och apelsindoftande hand- och fotkräm</a>
                 </p>
