--- a/no71-lipbalmvitamin.html
+++ b/no71-lipbalmvitamin.html
@@ -67,8 +67,8 @@ tag: white
                 <p>Dr Hardmans läppomada säljs enbart som stift emedan de är mer hygieniska och lättare att breda på. Med Dr Harmans läppomada behöver du inte oroa dig över att du äter en del av ditt läppfett. Alla ingredienser är ätbara! Kokosoljan och avokado-oljan är samma som används i livsmedel. Ricinolja, sheasmör, havtornsolja och lanolin = (fårfett) samt vitamin E är också ätligt, om än inte rekommenderade som föda.
                     <br>Kasta petrolater och parabener! Njut av ren mat för dina läppar med fuktgivande vitaminrika oljor. Havtornsoljan tillför massor av vitaminer och ger läppfettet dess fina färg. Patchouli är antiseptiskt och doftar gott tillsammans med den fräscha pepparmyntan.</p>
                 <h4>Dr Hardmans liknande produkter</h4>
-                    <p><a href="/lipbalm">No 70 Vanilla-Choko Lip Balm</a>
-                    <br><a href="/pawsandclawsraw">No 47 Paws and Claws hand- och fotkräm utan dofttillsatser</a>
-                    <br><a href="/pawsandclawslavender">No 48 Paws and Claws hand och fotkräm med doft av lavendel och ylang ylang</a>
-                    <br><a href="/pawsandclawsvanilla">No 48 Paws and Claws vanilj- och apelsindoftande hand- och fotkräm</a>
+                    <p><a href="/no70-lipbalm">No 70 Vanilla-Choko Lip Balm</a>
+                    <br><a href="/no47-pawsandclawsraw">No 47 Paws and Claws hand- och fotkräm utan dofttillsatser</a>
+                    <br><a href="/no48-pawsandclawslavender">No 48 Paws and Claws hand och fotkräm med doft av lavendel och ylang ylang</a>
+                    <br><a href="/no49-pawsandclawsvanilla">No 48 Paws and Claws vanilj- och apelsindoftande hand- och fotkräm</a>
                 </p>
