--- a/no32-serendipity.html
+++ b/no32-serendipity.html
@@ -8,7 +8,7 @@ tag: white
 ---
 
 <section class="dubbelpadding sloganbox" id="sloganbox10">
-    <h1 class="slogan text-center">Good fortune comes with a blessing</h1>
+    <h1 class="slogan text-center">Beauty has many faces. Hence, you are always beautiful!</h1>
 </section>
 
 <article class="padding grey">
